# spec_decode

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: _common.py  bench_e2e.py  bench_ngram.py  bench_protocol.py  bench_sampling.py
docs/: 01-PROBLEM.md  02-SCENARIOS.md  03-ALGORITHMS.md  04-DESIGN.md  05-DRAFT_METHODS.md  06-VERIFICATION.md  07-ADAPTIVE_CONTROL.md  08-EVALUATION.md  09-ROADMAP.md  ADAPTIVE_CONTROL.md  ALGORITHMS.md  DESIGN.md  DRAFT_METHODS.md  EVALUATION.md  PROBLEM.md  ROADMAP.md  SCENARIOS.md  VERIFICATION.md  VLLM_BACKEND.md
examples/: adaptive_k.py  client_server.py  offline_ngram.py  protocol_roundtrip.py  remote_generate.py
src/distspec/: __init__.py
src/distspec/client/: __init__.py  cli.py  confidence_client.py  draft_client.py  draft_proposer.py  fault_tolerant_client.py
src/distspec/common/: __init__.py  confidence.py  config.py  protocol.py  sampling.py
src/distspec/server/: __init__.py  base.py  hf_verifier.py  target_server.py  vllm_verifier.py
tests/: conftest.py  test_adaptive.py  test_batched_verify.py  test_e2e.py  test_rejection_sampling.py  test_vllm_verifier.py  test_vllm_verifier_unit.py
